tests/ui/traits/next-solver/opaques/no-define-in-wf-check.current.stderr
error: unconstrained opaque type
  --> $DIR/no-define-in-wf-check.rs:19:18
   |
LL |     type Tait1 = impl Sized;
   |                  ^^^^^^^^^^
   |
   = note: `Tait1` must be used in combination with a concrete type within the same module

error: unconstrained opaque type
  --> $DIR/no-define-in-wf-check.rs:27:18
   |
LL |     type Tait1 = impl Sized;
   |                  ^^^^^^^^^^
   |
   = note: `Tait1` must be used in combination with a concrete type within the same module

error: unconstrained opaque type
  --> $DIR/no-define-in-wf-check.rs:36:18
   |
LL |     type Tait1 = impl Sized;
   |                  ^^^^^^^^^^
   |
   = note: `Tait1` must be used in combination with a concrete type within the same module

error: unconstrained opaque type
  --> $DIR/no-define-in-wf-check.rs:47:18
   |
LL |     type Tait1 = impl Sized;
   |                  ^^^^^^^^^^
   |
   = note: `Tait1` must be used in combination with a concrete type within the same module

error: aborting due to 4 previous errors

